
Change Log Update (00.00.30)
* 2016-03-27
+ Worked out NEW_ENV Telnet options were locking up Windows Console Telnet.
  For now I've commented this out to look into at a later date.

Change Log Update (00.00.29)
* 2016-03-26
+ Prompts are not working for Terminal Detection (Telnet Option Parsing)
  When completed, now displays detected terminal 'ansi' and size '80x25' etc..
+ Prelogon Emulation Detection is working, sending ESC[6n and getting a response
  from the client,  ESC[xx;xxR for current X/Y Position showing the client 
  can use ESC sequence
+ Also added a new Detection Timer for 1.5 seconds to receive client response
  for ESC[6n query.
+ Prompts are now setup to show Emulation Detected results
- Left off on asking for ANSI Color when detection fails
- Left off on asking Encoding CP437 or UTF-8

Change Log Update (00.00.28)
* 2016-03-25
+ Created New Mod_PreLogon to handle pre-logon sequences like Emulation and Term Detection.
+ Reworking the Setup / Input methods per the modules right now.  
+ Moved the Initial Global Text Prompts out of Communicator to the PreLogon Modules to where
  they will be used.
+ Added parseFilename to session_io to handle text prompts with %%FILENAME.EXT MCI code
  This will parse and loaded the file name given in a prompt and display a file in the
  prompt string.
+ Communicator added Telnet Option detection global prompts.  So show when the client/server
  are communicates on options negotiation.
+ Removed new user functions from the Login Module, I'll create a new user module later next.
+ Removed SystemState, this wasn't being used as the MenuSystem is now called as the main state,
  More status will be added lateron for other "Services" once the main system is completed
  or further along.

Change Log Update (00.00.27)
* 2016-03-24
+ Update to main, moved path setup before the communicator is called so it has valid paths for
  creating / reading global text prompts.